// https://blog.csdn.net/weixin_43172991/article/details/130788303
// 使用的版本为3.20.X 不然会报错 不支持 optional 关键字
// 还需要吧googleapis 下面的文件导入到include目录下面或者参考tonic-build在github上面的例子
syntax="proto3";

package ds_user;

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

// option java_multiple_files = true;
// option java_package = "io.g";
// option java_outer_classname = "HelloWorldProto";

message DsUser{
    int32 id=1;
    optional string user_name=2;
    optional string user_password=3;
    optional int32 user_type=4;
    optional string email=5;
    optional string phone=6;
    optional int32 tenant_id=7;
    // google.protobuf.Timestamp create_time=8;
    optional string create_time=8;
    // optional google.protobuf.Timestamp update_time=9;
     optional string update_time=9;

    optional string queue = 10;
    optional int32 state = 11;
    optional string time_zone = 12;

}

// Generated according to https://cloud.google.com/apis/design/standard_methods
service UserService {
//  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {
//    option (google.api.http) = {
//      get: "/v1alpha1/Users"
//    };
//  }

  rpc GetUser(GetUserRequest) returns (DsUser) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=Users/*}"
    };
  }

//  rpc CreateUser(CreateUserRequest) returns (DsUser) {
//    option (google.api.http) = {
//      post: "/v1alpha1/Users"
//      body: "User"
//    };
//  }

  rpc UpdateUser(UpdateUserRequest) returns (DsUser) {
    option (google.api.http) = {
      patch: "/v1alpha1/{User.name=Users/*}"
      body: "User"
    };
  }

//  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty) {
//    option (google.api.http) = {
//      delete: "/v1alpha1/{name=Users/*}"
//    };
//  }
}

// message User {
// ! This should be defined elsewhere
// }

message ListUsersRequest {
  // The parent resource name, for example, "shelves/shelf1"
  string parent = 1;

  // The maximum number of items to return.
  int32 page_size = 2;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message ListUsersResponse {
  // The field name should match the noun "User" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsUser Users = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetUserRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateUserRequest {
  // The parent resource name where the User is to be created.
  string parent = 1;

  // The User id to use for this User.
  string User_id = 2;

  // The User resource to create.
  // The field name should match the Noun in the method name.
  DsUser User = 3;
}

message UpdateUserRequest {
  // The User resource which replaces the resource on the server.
  DsUser User = 1;

  // The update mask applies to the resource. For the `FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#fieldmask
   google.protobuf.FieldMask update_mask = 2;
}

message DeleteUserRequest {
  // The resource name of the User to be deleted.
  string name = 1;
}
