syntax="proto3";

package qrtz_calendars;

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

message QrtzCalendars{
    string sched_name=1;
    string calendar_name=2;
    bytes calendar=3;
}

// Generated according to https://cloud.google.com/apis/design/standard_methods
service QrtzCalendarsService {
  rpc ListQrtzCalendarss(ListQrtzCalendarssRequest) returns (ListQrtzCalendarssResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/qrtzcalendarss"
    };
  }

  rpc GetQrtzCalendars(GetQrtzCalendarsRequest) returns (QrtzCalendars) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=qrtzcalendarss/*}"
    };
  }

  rpc CreateQrtzCalendars(CreateQrtzCalendarsRequest) returns (QrtzCalendars) {
    option (google.api.http) = {
      post: "/v1alpha1/qrtzcalendarss"
      body: "qrtzcalendars"
    };
  }

  rpc UpdateQrtzCalendars(UpdateQrtzCalendarsRequest) returns (QrtzCalendars) {
    option (google.api.http) = {
      patch: "/v1alpha1/{qrtzcalendars.name=qrtzcalendarss/*}"
      body: "qrtzcalendars"
    };
  }

  rpc DeleteQrtzCalendars(DeleteQrtzCalendarsRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=qrtzcalendarss/*}"
    };
  }
}

// message QrtzCalendars {
// ! This should be defined elsewhere
// }

message ListQrtzCalendarssRequest {
  // The parent resource name, for example, "shelves/shelf1"
  string parent = 1;

  // The maximum number of items to return.
  int32 page_size = 2;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message ListQrtzCalendarssResponse {
  // The field name should match the noun "qrtzcalendars" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated QrtzCalendars qrtzcalendarss = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetQrtzCalendarsRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateQrtzCalendarsRequest {
  // The parent resource name where the qrtzcalendars is to be created.
  string parent = 1;

  // The qrtzcalendars id to use for this qrtzcalendars.
  string qrtzcalendars_id = 2;

  // The qrtzcalendars resource to create.
  // The field name should match the Noun in the method name.
  QrtzCalendars qrtzcalendars = 3;
}

message UpdateQrtzCalendarsRequest {
  // The qrtzcalendars resource which replaces the resource on the server.
  QrtzCalendars qrtzcalendars = 1;

  // The update mask applies to the resource. For the `FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#fieldmask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteQrtzCalendarsRequest {
  // The resource name of the qrtzcalendars to be deleted.
  string name = 1;
}
